Continue documenting controllers.
